--- a/ProyectoWeb/ProfileApp/templates/index.html
+++ b/ProyectoWeb/ProfileApp/templates/index.html
@@ -67,7 +67,7 @@
 		           <strong>@{{user.username}}</strong>
       
               </h1>
-              <p class="mb-5" style="max-width: 500px;" >I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+              <p class="mb-5" style="max-width: 500px;" >Descripcion del usuario</p>
               <ul class="list-inline list-social-icons mb-0">
                 <li class="list-inline-item">
                     <a href="https://es-la.facebook.com/" target="_blank">
