--- a/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/base.html
+++ b/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/base.html
@@ -35,7 +35,7 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="{% static 'ProyectoWebApp/headers.css' %}" rel="stylesheet">
-  </head>
+</head>
 <body>
     
 
@@ -84,9 +84,15 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+    
+          <li class="list-inline-item">
+            <a href="https://github.com/" target="_blank">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
+        </li>
     </ul>
   </footer>
 </div>
