--- a/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/home.html
+++ b/ProyectoWeb/ProyectoWebApp/templates/ProyectoWebApp/home.html
@@ -45,7 +45,7 @@
     <div class="colt">
        
       <h1 class="display-4 fst-italic">BLOG INFO 2021</h1>
-      <a href="#seccion-2">Posts</a>
+      <a href="#seccion-2">Introducción</a>
     </div>
   </div>
   <div class="wave">
@@ -54,121 +54,62 @@
 </section>
 <section id="seccion-2">
 <main class="container">
-  <div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary">World</strong>
-          <h3 class="mb-0">Featured post</h3>
-          <div class="mb-1 text-muted">Nov 12</div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+  
 
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Design</strong>
-          <h3 class="mb-0">Post title</h3>
-          <div class="mb-1 text-muted">Nov 11</div>
-          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="row g-5">
-    <div class="col-md-8">
-      <h3 class="pb-4 mb-4 fst-italic border-bottom">
+  <div class="bodyblog">
+    <div >
         
-      </h3>
-
+    <img  src="https://economiasustentable.com/wp-content/uploads/2021/09/Banner-ODS.jpeg">
+        
       <article class="blog-post">
-        <h2 class="blog-post-title">Sample blog post</h2>
-        <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
+        <h1 class="blog-post-title">Mundo: Entra en vigor la nueva Agenda de Desarrollo Sostenible</h1>
+        <p class="blog-post-meta">1 de enero de 2016 </a></p>
 
-        <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, lists, tables, images, code, and more are all supported as expected.</p>
+        <h3>Contiene diecisiete Objetivos de Desarrollo Sostenible (ODS) que reemplazan a los ocho Objetivos de Desarrollo del Milenio (ODM).</h3>
         <hr>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <h2>Blockquotes</h2>
-        <p>This is an example blockquote in action:</p>
-        <blockquote class="blockquote">
-          <p>Quoted text goes here.</p>
-        </blockquote>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <h3>Example lists</h3>
-        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout. This is an example unordered list:</p>
-        <ul>
-          <li>First list item</li>
-          <li>Second list item with a longer description</li>
-          <li>Third list item to close it out</li>
-        </ul>
-        <p>And this is an ordered list:</p>
-        <ol>
-          <li>First list item</li>
-          <li>Second list item with a longer description</li>
-          <li>Third list item to close it out</li>
-        </ol>
-        <p>And this is a definition list:</p>
-        <dl>
-          <dt>HyperText Markup Language (HTML)</dt>
-          <dd>The language used to describe and define the content of a Web page</dd>
-          <dt>Cascading Style Sheets (CSS)</dt>
-          <dd>Used to describe the appearance of Web content</dd>
-          <dt>JavaScript (JS)</dt>
-          <dd>The programming language used to build advanced Web sites and applications</dd>
-        </dl>
-        <h2>Inline HTML elements</h2>
-        <p>HTML defines a long list of available inline tags, a complete list of which can be found on the <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">Mozilla Developer Network</a>.</p>
-        <ul>
-          <li><strong>To bold text</strong>, use <code class="language-plaintext highlighter-rouge">&lt;strong&gt;</code>.</li>
-          <li><em>To italicize text</em>, use <code class="language-plaintext highlighter-rouge">&lt;em&gt;</code>.</li>
-          <li>Abbreviations, like <abbr title="HyperText Markup Langage">HTML</abbr> should use <code class="language-plaintext highlighter-rouge">&lt;abbr&gt;</code>, with an optional <code class="language-plaintext highlighter-rouge">title</code> attribute for the full phrase.</li>
-          <li>Citations, like <cite>— Mark Otto</cite>, should use <code class="language-plaintext highlighter-rouge">&lt;cite&gt;</code>.</li>
-          <li><del>Deleted</del> text should use <code class="language-plaintext highlighter-rouge">&lt;del&gt;</code> and <ins>inserted</ins> text should use <code class="language-plaintext highlighter-rouge">&lt;ins&gt;</code>.</li>
-          <li>Superscript <sup>text</sup> uses <code class="language-plaintext highlighter-rouge">&lt;sup&gt;</code> and subscript <sub>text</sub> uses <code class="language-plaintext highlighter-rouge">&lt;sub&gt;</code>.</li>
-        </ul>
-        <p>Most of these elements are styled by browsers with few modifications on our part.</p>
-        <h2>Heading</h2>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <h3>Sub-heading</h3>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <pre><code>Example code block</code></pre>
-        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+        <p class="presentacion">Desde el 1 de enero de 2016 entró en vigor oficialmente la Agenda 2030 para el Desarrollo Sostenible que durante los próximos 15 años marcará la pauta para construir un mundo más justo y equitativo para toda la población, además de velar por el medio ambiente.<br>
+
+          La Agenda, aprobada por los 193 Estados miembros de la ONU en septiembre pasado, está compuesta por 17 Objetivos de Desarrollo Sostenible (ODS), entre los que destacan la erradicación de la pobreza y el hambre, la consecución de educación y servicios médicos universales y la protección de los ecosistemas marinos y terrestres.<br>
+          
+          “Los 17 Objetivos de Desarrollo Sostenible son nuestra visión compartida de la humanidad y un contrato social entre los líderes del mundo y las personas” dijo el Secretario General de la ONU, Ban Ki-moon.<br>
+          
+          Los ODS abordan las necesidades de las personas de los países desarrollados y en desarrollo, haciendo hincapié en que no debe dejarse a nadie atrás.<br>
+          
+          La Agenda integra las dimensiones social, económica y ambiental del desarrollo sostenible, y atiende aspectos relacionados con la paz, la justicia y las instituciones eficaces.<br>
+          
+          La movilización de medios de aplicación, entre ellos recursos financieros, desarrollo y transferencia de tecnología y desarrollo de la capacidad, así como el papel de las alianzas, también se reconocen como esenciales.<br>
+          
+          Para la puesta en marcha del nuevo plan, Ban Ki-moon subrayó que hacer realidad la Agenda es responsabilidad principalmente de los países, pero agregó que también requerirá nuevas alianzas y solidaridad internacional.<br>
+          
+          El examen de los avances se llevará a cabo periódicamente en cada país, con la sociedad civil, las empresas y los representantes de varios grupos de interés.<br>
+          
+          A nivel regional, los países compartirán experiencias y tratarán asuntos comunes, mientras que con carácter anual en ONU, el Foro Político de Alto Nivel sobre el Desarrollo Sostenible (FPAN) hará un balance de los progresos a nivel mundial, identificando las deficiencias y cuestiones emergentes y recomendando medidas correctoras.</p>
+        <hr>
+        <h3>Pueblos indígenas esperan mejorar sus condiciones de vida</h3>
+        <p>Los pueblos indígenas consideran que la Agenda de Desarrollo Sostenible para 2030 puede contribuir a mejorar sus condiciones de vida y a que se reconozcan con más firmeza sus derechos, pero eso requerirá más respaldo a sus reivindicaciones y un acopio de información más rigurosa sobre esas comunidades.<br>
+
+          Un grupo de expertos debatió en las Naciones Unidas esas y otras cuestiones relacionadas con los asuntos que más preocupan a las poblaciones indígenas y entre ellas a las más de 800 comunidades de América Latina y el Caribe.<br>
+          
+          Fabiana del Popolo, experta de la División de Población de la Comisión Económica para América Latina y el Caribe (CEPAL) afirmó en declaraciones a Radio ONU que la agenda adoptada por los Estados miembros el 25 de septiembre supone un avance respecto de los objetivos que se plantearon para los últimos quince años.</p>
+        <img src="{% static 'ProyectoWebApp/fd.png' %}">
+       
+          
+          <p>Sin embargo, Del Popolo destacó que aún mucho por hacer en cuanto al reconocimiento pleno de los derechos indígenas.<br>
+
+            “A diferencia de los Objetivos de Desarrollo del Milenio (ODM) que no hacían ninguna mención a los pueblos indígenas, por lo menos en algunos Objetivos los pueblos indígenas son ahora mencionados. Antes estaban invisibles, manifestó la experta.<br>
+            
+            "Sin embargo, no es suficiente y no recoge las aspiraciones de los pueblos indígenas sobre todo en lo relativo a sus derechos colectivos. Hay que ver como se incluye en la implementación de los ODS el reconocimiento de los derechos colectivos que ya están consagrados en los estándares internacionales”, agregó.<br>
+            
+            Explicó que en una región tan diversa como la latinoamericana, los marcos jurídicos de los países también reflejan las diferencias entre países en la atención de las cuestiones indígenas, así como en los fondos que se asignan para implementar políticas que les afectan.<br>
+            
+            Señaló no obstante que hay una característica común a toda la región y es el progresivo fortalecimiento de las organizaciones indígenas y las demandas coincidentes que plantean.<br>
+            
+            Fabiana del Popolo destacó también la importancia que da la CEPAL a la inclusión de la identidad propia de los pueblos indígenas en los censos de población y otras bases de datos y agregó que esa es una reivindicación insistente de las comunidades en América Latina y el Caribe.</p>
+       
+        
+        
       </article>
 
-      <article class="blog-post">
-        <h2 class="blog-post-title">Another blog post</h2>
-        <p class="blog-post-meta">December 23, 2020 by <a href="#">Jacob</a></p>
-
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <blockquote>
-          <p>Longer quote goes here, maybe with some <strong>emphasized text</strong> in the middle of it.</p>
-        </blockquote>
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-
-      <article class="blog-post">
-        <h2 class="blog-post-title">New feature</h2>
-        <p class="blog-post-meta">December 14, 2020 by <a href="#">Chris</a></p>
-
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <ul>
-          <li>First list item</li>
-          <li>Second list item with a longer description</li>
-          <li>Third list item to close it out</li>
-        </ul>
-        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
-      </article>
 
       <nav class="blog-pagination" aria-label="Pagination">
         <a class="btn btn-outline-primary" href="#">volver al inicio</a>
