--- a/ProyectoWeb/PostApp/static/css/styles.css
+++ b/ProyectoWeb/PostApp/static/css/styles.css
@@ -392,7 +392,7 @@ button:not(:disabled),
 }
 
 textarea {
-  resize: vertical;
+  resize: none;
 }
 
 fieldset {
@@ -596,7 +596,7 @@ progress {
   color: #6c757d;
 }
 .blockquote-footer::before {
-  content: "— ";
+  content: "—";
 }
 
 .img-fluid {
@@ -4546,6 +4546,7 @@ textarea.form-control-lg {
 .card-body {
   flex: 1 1 auto;
   padding: 1rem 1rem;
+
 }
 
 .card-title {
@@ -11332,4 +11333,67 @@ textarea.form-control-lg {
 .nav li.active{
   box-shadow: 0px -1px 0px #ffffff inset;
   
+}
+
+.placa{
+  font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
+color: black; 
+font-size: 18px; 
+font-weight: 400; 
+text-align: center; 
+background: #ffffff; 
+
+overflow: hidden; 
+padding: 20px; 
+border-radius: 35px 0px 35px 0px; 
+-moz-border-radius: 35px 0px 35px 0px; 
+-webkit-border-radius: 35px 0px 35px 0px; 
+border: 2px solid #c9c9c9;
+width:100%;
+}
+
+.bot{
+  border: 2px solid black;
+  border-radius: 5px; 
+  text-align: center;
+  margin-left: 45%;
+  width: 10%;
+
+}
+.comentarios{
+  
+  margin-top:50px;
+  margin-left: 30px;
+  border: 1px solid #c9c9c9;
+  width:100%;
+  border-radius: 5px; 
+  padding:10px;
+
+}
+.nombre{
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-left: 40px;
+  margin-top: -40px;
+}
+.cmt{
+  margin-left: 40px;
+  margin-top: 5px;
+  font-size: 18px;
+}
+.hora{
+  margin-left: 50px;
+  margin-top: 5px;
+  float: right;
+}
+.im{
+  height: 40px;
+  width: 40px;
+}
+.fff p{
+  
+  color: black;
+  font-size: 20px;
 }
