--- a/ProyectoWeb/PostApp/templates/destacados.html
+++ b/ProyectoWeb/PostApp/templates/destacados.html
@@ -33,7 +33,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/my.png'%}" alt="pobreza" />
+                            <img class="card-img-top" src="{% static 'img/pobreza.jpg'%}" alt="pobreza" />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -44,7 +44,7 @@
                             </div>
                             <!-- POBREZA actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Pobreza">ir</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/6">ir</a></div>
                             </div>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/hambre.png'%}" alt="..." />
+                            <img class="card-img-top" src="{% static 'img/hambre.jpg'%}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -67,7 +67,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Hambre">ir</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/1">ir</a></div>
                             </div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                         <div class="card h-100">
                       
                             <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/salud.png'%}" alt="..." />
+                            <img class="card-img-top" src="{% static 'img/salud.jpg'%}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -88,7 +88,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Salud">ir</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/3">ir</a></div>
                             </div>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/educacion.png'%}" alt="..." />
+                            <img class="card-img-top" src="{% static 'img/educacion.jpg'%}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -110,16 +110,45 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Educacion">ir</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/2">ir</a></div>
                             </div>
                         </div>
                     </div>
+                    
+                    <!--IGUALDAD DE genero-->
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="{% static 'img/igualdadgro.jpg'%}" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">IGUALDAD DE GENERO</h5>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/7">ir</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
                     <!--ECONOMIA-->
 
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/economia.png'%}" alt="..." />
+                            <img class="card-img-top" src="{% static 'img/economia.jpg'%}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -130,55 +159,16 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Economia">ir</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/4">ir</a></div>
                             </div>
                         </div>
                     </div>
 
-                    <!--DESIGUALDAD-->
-                    <div class="col mb-5">
+                     <!--INFRAESTRUCTURA-->
+                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/sad.png'%}" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">DESIGUALDAD</h5>
-                                    
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Desigualdad">ir</a></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!--IGUALDAD DE genero-->
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/igualdad.png'%}" alt="..." />
-                            <!-- Product details-->
-                            <div class="card-body p-4">
-                                <div class="text-center">
-                                    <!-- Product name-->
-                                    <h5 class="fw-bolder">IGUALDAD DE GENERO</h5>
-                                </div>
-                            </div>
-                            <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Igualdad de genero">ir</a></div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!--INFRAESTRUCTURA-->
-                    <div class="col mb-5">
-                        <div class="card h-100">
-                            <!-- Product image-->
-                            <img class="card-img-top" src="{% static 'img/estr.png'%}" alt="..." />
+                            <img class="card-img-top" src="{% static 'img/infra.jpg'%}" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -189,16 +179,40 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/resultado_categoria/?Categoria=Infraestructura">ir</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/5">ir</a></div>
                             </div>
                         </div>
                     </div>
+
+                    <!--DESIGUALDAD-->
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="{% static 'img/desigualdad.jpg'%}" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">DESIGUALDAD</h5>
+                                    
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/post/8">ir</a></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+
+                   
                 </div>
             </div>
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; info 2021</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
