--- a/ProyectoWeb/registroApp/templates/social/resultado_busqueda.html
+++ b/ProyectoWeb/registroApp/templates/social/resultado_busqueda.html
@@ -63,16 +63,17 @@
     <!--====================================================
                         ABOUT
     ======================================================-->
+     {%if nombre%} 
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto" >
- {%if nombre%}            
+           
 			<h1 class="mb-0" style="text-transform:uppercase;">
 
 
 				<strong>@{{query}}</strong>
       
-              </h1>
-              <p class="mb-5" style="max-width: 500px;" >I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+      </h1>
+      <p class="mb-5" style="max-width: 500px;" >Descripcion del usuario</p>
               <ul class="list-inline list-social-icons mb-0">
                 <li class="list-inline-item">
                     <a href="https://es-la.facebook.com/" target="_blank">
